<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    android:layout_width="300dp"
    android:background="@drawable/alert_dialog_background"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/alert_dialog_background"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            tools:ignore="ContentDescription"
            android:layout_gravity="center"
            android:tint="@color/red_overlay"
            android:src="@drawable/ic_cancel_black_24dp"
            android:layout_width="90dp"
            android:layout_height="90dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:text="@string/quit"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:padding="4dp"
            android:text="@string/are_you_sure_to_exit"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/bottom_layout_question"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/no_dialog"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true"
                android:textSize="18sp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/no"
                app:backgroundTint="@color/green"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_backgroun_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/yes_dialog"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/yes"
                app:backgroundTint="@color/red"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_backgroun_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>