<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    android:layout_width="350dp"
    android:background="@drawable/alert_dialog_background"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/recover_your_password"
            android:textColor="@color/text_color_dark"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:background="@drawable/edit_text_background_login"
            android:layout_marginEnd="15sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="30dp"
            android:hint="@string/example_gmail_com"
            android:id="@+id/dialogue_email_recovery_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,TextFields"
            android:inputType="textEmailAddress" />

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/no_dialog_recovery_password"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true"
                android:textSize="18sp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/no"
                app:backgroundTint="@color/green"
                android:layout_alignParentStart="true"
                android:background="@drawable/button_backgroun_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/yes_dialog_recovery_password"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/yes"
                app:backgroundTint="@color/red"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_backgroun_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>