<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    android:layout_width="320dp"
    android:background="@drawable/alert_dialog_background"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/alert_dialog_background"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_dialog_warning"
            tools:ignore="ContentDescription"
            android:layout_gravity="center"
            android:tint="@color/colorMain"
            android:src="@drawable/ic_person_outline_black_24dp"
            android:layout_width="90dp"
            android:layout_height="90dp"/>

        <TextView
            android:id="@+id/title_dialog_warning"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:text="@string/ops"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/description_dialog_warning"
            android:padding="4dp"
            android:text="@string/you_don_t_have_complete_your_profile"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quit_dialog_warning"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:textAlignment="center"
                android:focusable="true"
                android:text="@string/skip_now"
                android:textAllCaps="true"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:backgroundTint="@color/red_overlay"
                android:background="@drawable/button_backgroun_game"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/save_dialog_warning"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:text="@string/complete"
                android:clickable="true"
                android:focusable="true"
                android:textAllCaps="true"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:backgroundTint="@color/colorMain"
                android:background="@drawable/button_backgroun_game"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>