<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/alert_dialog_background"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo_create_group_dialog"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/add_user"
        app:elevation="7dp"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp" />

    <TextView
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/group_name"
        android:textSize="18sp"
        android:textColor="@color/text_color_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/title_create_group_dialog"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="6dp"
        android:hint="@string/write_group_name_here"
        android:textSize="18sp"
        android:inputType="text"
        android:background="@drawable/edit_text_background_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/group_description"
        android:textSize="18sp"
        android:textColor="@color/text_color_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/description_create_group_dialog"
        android:paddingStart="20dp"
        android:gravity="start"
        android:layout_marginTop="5dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:hint="@string/write_group_description_here_n_n_n"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,LabelFor" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/complete_create_group_dialog"
            android:text="Create"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:textAllCaps="false"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:background="@drawable/button_background_login"
            android:layout_width="160dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/cancel_create_group_dialog"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/text_color_dark"
            android:background="@drawable/background_write_post"
            android:layout_width="160dp"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>