<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/alert_dialog_background"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/alert_dialog_background"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_dialog_bonus"
            tools:ignore="ContentDescription"
            android:layout_gravity="center"
            android:src="@drawable/ic_coins_leader_board"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <TextView
            android:id="@+id/title_dialog_bonus"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:textColor="@color/green"
            android:text="@string/congratulation"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/description_dialog_bonus"
            android:padding="4dp"
            android:text="@string/you_got_1_points"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/bottom_layout_question"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/refresh_dialog_bonus"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/collect"
                android:layout_alignParentEnd="true"
                app:backgroundTint="@color/colorMain"
                android:background="@drawable/wrong_answer_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>