<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    android:layout_width="300dp"
    android:background="@drawable/alert_dialog_background"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/alert_dialog_background"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_dialog"
            tools:ignore="ContentDescription"
            android:layout_gravity="center"
            android:tint="@color/red"
            android:src="@drawable/ic_signal_cellular_connected_no_internet_0_bar_black_24dp"
            android:layout_width="90dp"
            android:layout_height="90dp"/>

        <TextView
            android:id="@+id/title_dialog"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:text="@string/ops"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/description_dialog"
            android:padding="4dp"
            android:text="@string/no_internet_connection"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/bottom_layout_question"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/refresh_dialog"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/refresh"
                android:layout_alignParentEnd="true"
                android:background="@drawable/wrong_answer_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>